[Task #385] Resolve whether an extracted entity is an event type. If so, add a child event with the corresponding type to the reported occurrence.