@@ -4,12 +4,12 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import cz.cvut.kbss.reporting.environment.config.PropertyMockingApplicationContextInitializer;
 import cz.cvut.kbss.reporting.environment.generator.Generator;
 import cz.cvut.kbss.reporting.exception.WebServiceIntegrationException;
+import cz.cvut.kbss.reporting.model.Event;
 import cz.cvut.kbss.reporting.model.InitialReport;
 import cz.cvut.kbss.reporting.model.OccurrenceReport;
 import cz.cvut.kbss.reporting.model.textanalysis.ExtractedItem;
 import cz.cvut.kbss.reporting.service.BaseServiceTestRunner;
 import cz.cvut.kbss.reporting.util.ConfigParam;
-import org.hamcrest.CoreMatchers;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
@@ -20,15 +20,19 @@ import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.mock.env.MockEnvironment;
 import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.web.client.ExpectedCount;
 import org.springframework.test.web.client.MockRestServiceServer;
 import org.springframework.web.client.RestTemplate;
 
+import java.net.URI;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
+import static org.hamcrest.CoreMatchers.containsString;
 import static org.junit.Assert.*;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.*;
 import static org.springframework.test.web.client.response.MockRestResponseCreators.withServerError;
@@ -38,6 +42,7 @@ import static org.springframework.test.web.client.response.MockRestResponseCreat
 public class TextAnalyzingOccurrenceReportFactoryTest extends BaseServiceTestRunner {
 
     private static final String SERVICE_URL = "http://localhost/analyze";
+    private static final String EVENT_TYPE_REPO_URL = "http://localhost/model";
     private static final String TEXT = "Initial report text content.";
     private static final double DEFAULT_CONFIDENCE = 0.5;
 
@@ -62,13 +67,14 @@ public class TextAnalyzingOccurrenceReportFactoryTest extends BaseServiceTestRun
         this.mockServer = MockRestServiceServer.createServer(restTemplate);
         final MockEnvironment mockEnvironment = (MockEnvironment) environment;
         mockEnvironment.setProperty(ConfigParam.TEXT_ANALYSIS_SERVICE_URL.toString(), SERVICE_URL);
+        mockEnvironment.setProperty(ConfigParam.EVENT_TYPE_REPOSITORY_URL.toString(), EVENT_TYPE_REPO_URL);
     }
 
     @Test
     public void createFromInitialReportPassesInitialReportContentToTextAnalyzingService() throws Exception {
         final InitialReport initialReport = initialReport();
         mockServer.expect(requestTo(SERVICE_URL)).andExpect(method(HttpMethod.POST)).andExpect(content().string(
-                CoreMatchers.containsString(TEXT))).andRespond(
+                containsString(TEXT))).andRespond(
                 withSuccess(objectMapper.writeValueAsString(textAnalysisResult()), MediaType.APPLICATION_JSON));
         final OccurrenceReport result = reportFactory.createFromInitialReport(initialReport);
         assertNotNull(result);
@@ -95,7 +101,7 @@ public class TextAnalyzingOccurrenceReportFactoryTest extends BaseServiceTestRun
     public void createFromInitialReportThrowsWebServiceIntegrationExceptionWhenErrorOccurs() {
         final InitialReport initialReport = initialReport();
         mockServer.expect(requestTo(SERVICE_URL)).andExpect(method(HttpMethod.POST)).andExpect(content().string(
-                CoreMatchers.containsString(TEXT))).andRespond(withServerError());
+                containsString(TEXT))).andRespond(withServerError());
         thrown.expect(WebServiceIntegrationException.class);
         reportFactory.createFromInitialReport(initialReport);
     }
@@ -114,21 +120,21 @@ public class TextAnalyzingOccurrenceReportFactoryTest extends BaseServiceTestRun
     public void createFromInitialAttachesTextAnalysisResultsToInitialReport() throws Exception {
         final TextAnalyzingOccurrenceReportFactory.TextAnalysisResultWrapper analysisResult = textAnalysisResult();
         final List<TextAnalyzingOccurrenceReportFactory.TextAnalysisResult> items = IntStream.range(5, 10)
-                                                                                             .mapToObj(i -> {
-                                                                                                 final TextAnalyzingOccurrenceReportFactory.TextAnalysisResult item = new TextAnalyzingOccurrenceReportFactory.TextAnalysisResult();
-                                                                                                 item.setEntityLabel(
-                                                                                                         "EntityType" +
-                                                                                                                 i);
-                                                                                                 item.setEntityResource(
-                                                                                                         Generator
-                                                                                                                 .generateEventType());
-                                                                                                 return item;
-                                                                                             }).collect(
-                        Collectors.toList());
+                                                                                             .mapToObj(
+                                                                                                     i -> new TextAnalyzingOccurrenceReportFactory.TextAnalysisResult(
+                                                                                                             "EventType" +
+                                                                                                                     i,
+                                                                                                             Generator
+                                                                                                                     .generateEventType()))
+                                                                                             .collect(
+                                                                                                     Collectors
+                                                                                                             .toList());
         analysisResult.setResults(items);
         mockServer.expect(requestTo(SERVICE_URL)).andExpect(method(HttpMethod.POST)).andExpect(content().string(
-                CoreMatchers.containsString(TEXT)))
+                containsString(TEXT)))
                   .andRespond(withSuccess(objectMapper.writeValueAsString(analysisResult), MediaType.APPLICATION_JSON));
+        mockServer.expect(ExpectedCount.times(items.size()), requestTo(containsString(EVENT_TYPE_REPO_URL)))
+                  .andRespond(withSuccess("false", MediaType.APPLICATION_JSON));
 
         final OccurrenceReport result = reportFactory.createFromInitialReport(initialReport());
         final InitialReport initialReport = result.getInitialReport();
@@ -140,5 +146,59 @@ public class TextAnalyzingOccurrenceReportFactoryTest extends BaseServiceTestRun
             assertTrue(matching.isPresent());
             assertEquals(DEFAULT_CONFIDENCE, matching.get().getConfidence(), 0.001);
         }
+        mockServer.verify();
+    }
+
+    @Test
+    public void createFromInitialLooksForExtractedEventTypes() throws Exception {
+        final TextAnalyzingOccurrenceReportFactory.TextAnalysisResultWrapper analysisResult = textAnalysisResult();
+        final List<TextAnalyzingOccurrenceReportFactory.TextAnalysisResult> items = new ArrayList<>();
+        items.add(new TextAnalyzingOccurrenceReportFactory.TextAnalysisResult("someEntity", Generator.generateUri()));
+        analysisResult.setResults(items);
+        mockServer.expect(requestTo(SERVICE_URL)).andExpect(method(HttpMethod.POST)).andExpect(content().string(
+                containsString(TEXT)))
+                  .andRespond(withSuccess(objectMapper.writeValueAsString(analysisResult), MediaType.APPLICATION_JSON));
+        mockServer.expect(requestTo(containsString(EVENT_TYPE_REPO_URL)))
+                  .andRespond(withSuccess("false", MediaType.APPLICATION_JSON));
+        final OccurrenceReport result = reportFactory.createFromInitialReport(initialReport());
+        assertTrue(result.getOccurrence().getChildren() == null || result.getOccurrence().getChildren().isEmpty());
+        mockServer.verify();
+    }
+
+    @Test
+    public void createFromInitialReportAddsEventsForExtractedEventTypesToOccurrence() throws Exception {
+        final TextAnalyzingOccurrenceReportFactory.TextAnalysisResultWrapper analysisResult = textAnalysisResult();
+        final List<TextAnalyzingOccurrenceReportFactory.TextAnalysisResult> items = new ArrayList<>();
+        final URI eventType = Generator.generateEventType();
+        items.add(new TextAnalyzingOccurrenceReportFactory.TextAnalysisResult("event", eventType));
+        analysisResult.setResults(items);
+        mockServer.expect(requestTo(SERVICE_URL)).andExpect(method(HttpMethod.POST)).andExpect(content().string(
+                containsString(TEXT)))
+                  .andRespond(withSuccess(objectMapper.writeValueAsString(analysisResult), MediaType.APPLICATION_JSON));
+        mockServer.expect(requestTo(containsString(EVENT_TYPE_REPO_URL)))
+                  .andRespond(withSuccess("true", MediaType.APPLICATION_JSON));
+        final OccurrenceReport result = reportFactory.createFromInitialReport(initialReport());
+        assertEquals(1, result.getOccurrence().getChildren().size());
+        final Event event = result.getOccurrence().getChildren().iterator().next();
+        assertEquals(eventType, event.getEventType());
+        mockServer.verify();
+    }
+
+    @Test
+    public void createFromInitialReportThrowsWebServiceIntegrationWhenUnableToResolveEventTypes() throws Exception {
+        final TextAnalyzingOccurrenceReportFactory.TextAnalysisResultWrapper analysisResult = textAnalysisResult();
+        final List<TextAnalyzingOccurrenceReportFactory.TextAnalysisResult> items = new ArrayList<>();
+        final URI eventType = Generator.generateEventType();
+        items.add(new TextAnalyzingOccurrenceReportFactory.TextAnalysisResult("event", eventType));
+        analysisResult.setResults(items);
+        mockServer.expect(requestTo(SERVICE_URL)).andExpect(method(HttpMethod.POST)).andExpect(content().string(
+                containsString(TEXT)))
+                  .andRespond(withSuccess(objectMapper.writeValueAsString(analysisResult), MediaType.APPLICATION_JSON));
+        mockServer.expect(requestTo(containsString(EVENT_TYPE_REPO_URL)))
+                  .andRespond(withServerError());
+        thrown.expect(WebServiceIntegrationException.class);
+        thrown.expectMessage(containsString("event type."));
+
+        reportFactory.createFromInitialReport(initialReport());
     }
 }
